--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
   <section id="about">
     <h2>เกี่ยวกับแผนก</h2>
     <p>
-      
+      แผนกอาหารและโภชนาการ มุ่งเน้นการเรียนรู้ทั้งภาคทฤษฎีและภาคปฏิบัติ นักเรียนจะได้ฝึกทำอาหารจริง เรียนรู้หลักโภชนาการ สุขาภิบาลอาหาร 
+      และการประกอบอาชีพด้านอาหาร เพื่อเสริมสร้างทักษะพื้นฐานและทักษะวิชาชีพที่จำเป็นต่อการทำงานจริง
+นอกจากนี้ นักเรียนยังได้ฝึกปฏิบัติในห้องปฏิบัติการที่มีอุปกรณ์ทันสมัย ควบคู่กับการฝึกประสบการณ์จากสถานประกอบการจริง
+   เพื่อให้เกิดความเข้าใจในสภาพแวดล้อมการทำงาน ฝึกการทำงานเป็นทีม ความรับผิดชอบ และการแก้ปัญหาเฉพาะหน้า พร้อมปลูกฝังจิตสำนึกด้านความปลอดภัยอาหาร สุขภาพของผู้บริโภค และแนวคิดการใช้อาหารอย่างคุ้มค่าและยั่งยืน เตรียมความพร้อมก่อนก้าวสู่การทำงานในสายอาชีพด้านอาหารและโภชนาการอย่างมั่นใจ
     </p>
   </section>
 
@@ -196,4 +199,5 @@
 
 </body>
 </html>
+
 
